feat: apply HC-703 backend quality and preserve accepted contracts